# tv_data

./: README.md  pyproject.toml
frontend/: SETUP.md
frontend/src/: router.js
frontend/src/pages/: DatafieldListView.vue
poc/abstract/: smart_contract.md
tv_data/: cycle.py  dynamic_virtual_doctype.py  github.py  hooks.py  modules.txt  repo.py  requirements.txt
tv_data/public/js/: tv_data.js  tv_data_settings.js
tv_data/templates/includes/: cycle_item.html  cycle_item_2.html  timeline_horizontal_template.html  timeline_template.html  timeline_template_2.html
tv_data/tv_data/dashboard_chart/merged_updates_heatmap/: merged_updates_heatmap.json
tv_data/tv_data/doctype/datafield/: datafield.js  datafield.json  datafield.py  test_datafield.py
tv_data/tv_data/doctype/datafield_incoming_alert_table/: datafield_incoming_alert_table.json  datafield_incoming_alert_table.py
tv_data/tv_data/doctype/datafield_merged_update/: datafield_merged_update.js  datafield_merged_update.json  datafield_merged_update.py  test_datafield_merged_update.py
tv_data/tv_data/doctype/datafield_series/: datafield_series.js  datafield_series.json  datafield_series.py  test_datafield_series.py
tv_data/tv_data/doctype/datafield_update_table/: datafield_update_table.json  datafield_update_table.py
tv_data/tv_data/doctype/tv_data_settings/: test_tv_data_settings.py  tv_data_settings.js  tv_data_settings.json  tv_data_settings.py
tv_data/tv_data/doctype/tv_data_settings_defaults_table/: tv_data_settings_defaults_table.json  tv_data_settings_defaults_table.py
(+6 files in other folders)
